phonfieldwork 0.0.7 (24.06.2020)
  - add the "audacity_to_df" function

phonfieldwork 0.0.6 (20.06.2020)
  - add "encoding" arguments to functions for working with TextGrids
  - add "textgrid" argument to the "draw_sound()" function
  - change subgraphs alignment in the "draw_sound()" function including textgrid annotation
  - add "from" and "to" arguments to the "draw_sound()" function
  - add .mp3 format reading options to all functions that work with sounds
  - add "text_size" argument to the "draw_sound()" function
  - add "zoom"" argument to the "draw_sound()" function
  - add the "get_sound_duration()" function
  - fix ploting of multiple sounds with multiple .TextGrids
  - add an argument "title_as_filename" to the "draw_sound()" function
  - change .TextGrid associated arguments of the "create_viewer()" function to "table" argument; as a result users now need to provide a table for the annotation viewer and not a .TextGrid

phonfieldwork 0.0.5 (07.06.2020)
  - add "textgrid_to_df()" function for reading Praat files
  - add "create_glossed_document()" function for converting .flextext files into a glossed document
  - add "flextext_to_df()" function for reading FLEx files
  - add "eaf_to_df()" function for reading ELAN files
  - add "exb_to_df()" function for reading EXMARaLDA files
  - rename "textgrid" argument into "annotation" argument in "concatenate_soundfiles()" function adding new possible values

phonfieldwork 0.0.4 (10.05.2020)
  - add "create_subannotation()" function

phonfieldwork 0.0.3 (07.01.2020)
  - vertically and horisontally center text in presentations created by "create_presentation()"; thx @Pandaklez #1
  - add the "font_size" argument to the "create_presentation()" function
  - add "rename_videofiles()" function
  - rebuild html viewer for sounds with JavaScript with the help of new functions "create_image_look_up()" and "create_sound_play()".

phonfieldwork 0.0.2 (23.09.2019)